# Grading-System

./: CMakeLists.txt  main  makefile  part2_curve2.txt  part2_no_curve.txt
headers/: includes_file.h  ogrenci.h  ogrenci_part3.h  part1.h  part2.h  part3.h
inputs/: part1_input.txt
outputs/: part1_output.txt  part2_curve1.txt  part2_curve2.txt  part2_curve3.txt  part2_no_curve.txt  part3_F1_list.txt  part3_names_and_letters.txt  part3_output.txt  part3_top10_list.txt
src/: main.cpp  part1.cpp  part2.cpp  part3.cpp
